Add daisyUI dependency and implement routing with navigation in RootLayout

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,1 +1,21 @@
 @import "tailwindcss";
+@plugin "daisyui";
+
+html,
+body {
+  @apply h-full;
+}
+
+body {
+  @apply flex flex-col;
+}
+
+main {
+  @apply grow;
+}
+
+@layer components {
+  .align-elements {
+    @apply max-w-[1300px] mx-auto px-5;
+  }
+}
